--- a/hobbies.html
+++ b/hobbies.html
@@ -17,7 +17,7 @@
       </div>
 
       <header>
-        <img src="img/image1.png" alt="D.Nursarah" class="profile-image">
+        <img src="img/me.png" alt="D.Nursarah" class="profile-image">
         <h1 class="tag name">Hey, I'm Sarah!</h1>
         <p class="tag">My Hobbies</p>
       </header>
